2002-01-13  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/am/distdir.am (distdir): Handle subdirectories.
	* tests/extra6.test: New file.
	* tests/Makefile.am (TESTS): Add it.

2002-01-13  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/extra2.test: Run $ACLOCAL.

2002-01-12  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* m4/init.m4 (AM_INIT_AUTOMAKE): Set PACKAGE and VERSION from
	AM_INIT_AUTOMAKE arguments when using the old-style call.
	Use AC_PACKAGE_TARNAME and AC_PACKAGE_VERSION in the new form only.
	Suggested by Pavel Roskin.

2002-01-12  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* test/nodefine.test, test/nodefine2.test: Check that no-define
	works, not the contrary...
	* m4/options.m4 (_AM_IF_OPTIONS): Use m4_ifset.
	* m4/init.m4 (AM_INIT_AUTOMAKE): A third argument implies no-define,
	not the contrary.

2002-01-12  Jim Meyering  <meyering@lucent.com>

	* automake.in (scan_one_autoconf_file): Unquote AC_LIBOBJ argument.
	* tests/libobj11.test: New file.
	* tests/Makefile.am (TESTS): Add libobj11.test.

2002-01-09  Ryan T. Sammartino  <ryants@shaw.ca>

	* lib/depcomp (msvisualcpp): Strip -Gm, -Gi, and -ZI options.

2002-01-09  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (file_contents_internal): Introduce two variables,
	$is_rule and $discard_rules to track rules spanning across multiple
	paragraphs.  This fixes a very nasty bug reported by Dmitry Mikhin
	where only the first paragraph of such a multi-paragraph rule was
	discarded; but it leaves many similar latent bugs (see the FIXMEs).

2002-01-09  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/dup3.test: Remove all -I from $ACLOCAL before using it.
	* tests/error.test: Use some macro names which are not defined by
	Automake itself.

2002-01-09  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.texi (Complete, Macros, Options): Document the new style
	AM_INIT_AUTOMAKE.  Remove AM_AUTOMAKE_OPTIONS documentaion.
	* m4/init.m4 (AM_INIT_AUTOMAKE): Get PACKAGE and VERSION from