@@ -111,7 +111,7 @@ endif %?TOPDIR_P%
 ## us work correctly with an enclosing package.
 ##
 if %?SUBDIRS%
-	for subdir in $(%DIST_SUBDIR_NAME%); do \
+	list='$(%DIST_SUBDIR_NAME%)'; for subdir in $$list; do \
 	  if test "$$subdir" = .; then :; else \
 	    test -d $(distdir)/$$subdir \
 	    || mkdir $(distdir)/$$subdir \
