@@ -253,6 +253,7 @@ pr243.test \
 pr266.test \
 pr279.test \
 pr279-2.test \
+pr287.test \
 pr9.test \
 pr72.test \
 pr87.test \
