@@ -1,3 +1,11 @@
+2002-01-13  Tom Tromey  <tromey@redhat.com>
+
+	For PR automake/287:
+	* lib/am/distdir.am (distdir): Use `$$list' trick when looping
+	over subdirs.
+	* tests/Makefile.am (TESTS): Added pr287.test.
+	* tests/pr287.test: New file.
+
 2002-01-13  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	* lib/am/distdir.am (distdir): Handle subdirectories.
